# glapp

./: .gitmodules  CMakeLists.txt
glapp_tests/: CMakeLists.txt  main.cpp
include/glapp/: app.h
src/: app.cpp
